--- a/Coursework/flask/vercel.json
+++ b/Coursework/flask/vercel.json
@@ -2,7 +2,7 @@
     "rewrites": [
       {
         "source": "/(.*)",
-        "destination": "app.py"
+        "destination": "/Coursework/flask/app.py"
       }
     ],
     "builds": [
